<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentLogin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEFCFF"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/imageView"
            android:src="@drawable/_logo"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/welcomeStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_student"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="25dp"

            />

        <EditText
            android:id="@+id/studentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:ems="10"
            android:hint="@string/student_id"
            android:minHeight="48dp"
            android:layout_marginVertical="20dp"
            android:background="@color/white"
            android:textColor="#6CAFBD"
            />


        <EditText
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/studentID"
            android:hint="@string/student_name"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:background="@color/white"
            android:textColor="#6CAFBD"/>



        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/studentName"
            android:backgroundTint="#4DC5DB"
            android:onClick="Login"
            android:text="@string/login"
            android:layout_marginVertical="20dp"
            android:textAllCaps="false"
            android:textSize="21sp" />




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>